# pretix-nocodb

./: .gitignore  LICENSE  MANIFEST.in  README.md  devenv.nix  flake.nix  plugin-build.nix  pretixplugin.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
pretix_nocodb/: __init__.py  apps.py  client.py  forms.py  plugin_settings.py  signals.py  sync.py  tasks.py  urls.py  views.py
pretix_nocodb/templates/pretix_nocodb/: settings.html
tests/: __init__.py  conftest.py  settings.py  test_sync.py
